Prevent content overflow in panel

--- a/MusicX/src/index.css
+++ b/MusicX/src/index.css
@@ -110,7 +110,7 @@ body{
     margin: 10px;
     padding: 10px;
     display: inline;
-    height: 92px !important;
+    /*height: 92px !important;*/
     width: 250px;
 }
 .panel-body{
